fixed overflow

--- a/src/app/resume-builder/builder/builder.component.scss
+++ b/src/app/resume-builder/builder/builder.component.scss
@@ -182,6 +182,7 @@
   display: flex;
   justify-content: center;
   background: var(--bg-primary);
+  overflow-x: hidden;
 
   @media (max-width: 1200px) {
     padding: $spacing-lg $spacing-md;
